feat: add controler-cart

--- a/cart.html
+++ b/cart.html
@@ -134,7 +134,7 @@
     <div class="container">
       <div class="cart_inner">
         <div class="table-responsive">
-          <table class="table">
+          <table class="table" id='table'>
             <thead>
               <tr>
                 <th scope="col">Producto</th>
@@ -143,179 +143,8 @@
                 <th scope="col">Total</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>
-                  <div class="media">
-                    <div class="d-flex">
-                      <img src="img/cart/cart1.jpg" alt="" />
-                    </div>
-                    <div class="media-body">
-                      <p>Smartwatch</p>
-                    </div>
-                  </div>
-                </td>
-                <td>
-                  <h5>16,99€</h5>
-                </td>
-                <td>
-                  <div class="product_count">
-                    <input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:"
-                      class="input-text qty" />
-                    <button
-                      onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
-                      class="increase items-count" type="button">
-                      <i class="lnr lnr-chevron-up"></i>
-                    </button>
-                    <button
-                      onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
-                      class="reduced items-count" type="button">
-                      <i class="lnr lnr-chevron-down"></i>
-                    </button>
-                  </div>
-                </td>
-                <td>
-                  <h5>16,99€</h5>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div class="media">
-                    <div class="d-flex">
-                      <img src="img/cart/cart2.jpg" alt="" />
-                    </div>
-                    <div class="media-body">
-                      <p>Colonia After Shave</p>
-                    </div>
-                  </div>
-                </td>
-                <td>
-                  <h5>4,15€</h5>
-                </td>
-                <td>
-                  <div class="product_count">
-                    <input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:"
-                      class="input-text qty" />
-                    <button
-                      onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
-                      class="increase items-count" type="button">
-                      <i class="lnr lnr-chevron-up"></i>
-                    </button>
-                    <button
-                      onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
-                      class="reduced items-count" type="button">
-                      <i class="lnr lnr-chevron-down"></i>
-                    </button>
-                  </div>
-                </td>
-                <td>
-                  <h5>4,15€</h5>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div class="media">
-                    <div class="d-flex">
-                      <img src="img/cart/cart3.jpg" alt="" />
-                    </div>
-                    <div class="media-body">
-                      <p>Pegamento extrafuerte</p>
-                    </div>
-                  </div>
-                </td>
-                <td>
-                  <h5>2,45€</h5>
-                </td>
-                <td>
-                  <div class="product_count">
-                    <input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:"
-                      class="input-text qty" />
-                    <button
-                      onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
-                      class="increase items-count" type="button">
-                      <i class="lnr lnr-chevron-up"></i>
-                    </button>
-                    <button
-                      onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
-                      class="reduced items-count" type="button">
-                      <i class="lnr lnr-chevron-down"></i>
-                    </button>
-                  </div>
-                </td>
-                <td>
-                  <h5>2,45€</h5>
-                </td>
-              </tr>
-              <tr class="bottom_button">
-                <td>
-                  <a class="button" href="#">Actualizar carrito</a>
-                </td>
-                <td></td>
-                <td></td>
-                <td>
-                  <div class="cupon_text d-flex align-items-center">
-                    <input type="text" placeholder="Coupon Code" />
-                    <a class="primary-btn" href="#">Aplica</a>
-                    <a class="button" href="#">Tienes un cupón?</a>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td>
-                  <h5>Subtotal</h5>
-                </td>
-                <td>
-                  <h5>23,59€</h5>
-                </td>
-              </tr>
-              <tr class="shipping_area">
-                <td class="d-none d-md-block"></td>
-                <td></td>
-                <td>
-                  <h5>Envío</h5>
-                </td>
-                <td>
-                  <div class="shipping_box">
-                    <ul class="list">
-                      <li><a href="#">Tarifa plana: 5,00€</a></li>
-                      <li><a href="#">Envío gratis</a></li>
-                      <li><a href="#">Tarifa plana: 10,00€</a></li>
-                      <li class="active">
-                        <a href="#">Entrega en tienda: 2,00€</a>
-                      </li>
-                    </ul>
-                    <h6>
-                      Calcula tu envío
-                      <i class="fa fa-caret-down" aria-hidden="true"></i>
-                    </h6>
-                    <select class="shipping_select">
-                      <option value="1">Francia</option>
-                      <option value="2">México</option>
-                      <option value="4">Portugal</option>
-                    </select>
-                    <select class="shipping_select">
-                      <option value="1">Selecciona un país</option>
-                      <option value="2">Selecciona una ciudad</option>
-                      <option value="4">Selecciona un barrio</option>
-                    </select>
-                    <input type="text" placeholder="código postal" />
-                    <a class="gray_btn" href="#">Actualizar detalles</a>
-                  </div>
-                </td>
-              </tr>
-              <tr class="out_button_area">
-                <td class="d-none-l"></td>
-                <td class=""></td>
-                <td></td>
-                <td>
-                  <div class="checkout_btn_inner d-flex align-items-center">
-                    <a class="gray_btn" href="#">Continua comprando</a>
-                    <a class="primary-btn ml-2" href="#">Ir al carrito</a>
-                  </div>
-                </td>
-              </tr>
+            <tbody id='tbody'>
+
             </tbody>
           </table>
         </div>
@@ -419,7 +248,78 @@
     </div>
   </footer>
   <!--================ End footer Area  =================-->
-
+  <template id='template-tbody'>
+    <tr>
+      <td>
+        <div class="media">
+          <div class="d-flex">
+            <img src="img/cart/cart1.jpg" width="100" height='100' alt="" />
+          </div>
+          <div class="media-body">
+            <p>Smartwatch</p>
+          </div>
+        </div>
+      </td>
+      <td>
+        <h5 class='price'>16,99€</h5>
+      </td>
+      <td>
+        <div class="product_count">
+          <input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:" class="input-text qty" />
+          <button
+            onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+            class="increase items-count" type="button">
+            <i class="lnr lnr-chevron-up"></i>
+          </button>
+          <button
+            onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) && sst > 0 ) result.value--;return false;"
+            class="reduced items-count" type="button">
+            <i class="lnr lnr-chevron-down"></i>
+          </button>
+        </div>
+      </td>
+      <td>
+        <h5 class='subtotal'>16,99€</h5>
+      </td>
+    </tr>
+  </template>
+  <template id='template-tfooter'>
+    <tr class="bottom_button">
+      <td>
+        <a class="button" href="#">Actualizar carrito</a>
+      </td>
+      <td></td>
+      <td></td>
+      <td>
+        <div class="cupon_text d-flex align-items-center">
+          <input type="text" placeholder="Coupon Code" />
+          <a class="primary-btn" href="#">Aplica</a>
+          <a class="button" href="#">Tienes un cupón?</a>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td>
+        <h5>Subtotal</h5>
+      </td>
+      <td>
+        <h5 id='total'>23,59€</h5>
+      </td>
+    </tr>
+    <tr class="out_button_area">
+      <td class="d-none-l"></td>
+      <td class=""></td>
+      <td></td>
+      <td>
+        <div class="checkout_btn_inner d-flex align-items-center">
+          <a class="gray_btn" href="#">Continua comprando</a>
+          <a class="primary-btn ml-2" href="#">Ir al carrito</a>
+        </div>
+      </td>
+    </tr>
+  </template>
   <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
   <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
   <script src="vendors/skrollr.min.js"></script>
@@ -431,6 +331,7 @@
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
   <script src="js/notify.js"></script>
+  <script src="js/controlador-cart.js"></script>
 </body>
 
 </html>
