--- a/category.html
+++ b/category.html
@@ -44,9 +44,6 @@
                     <a class="nav-link" href="category.html">Categorías</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="single-product.html">Producto</a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="checkout.html">Comprar</a>
                   </li>
                   <li class="nav-item">
@@ -453,7 +450,6 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Tienda</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Producto</a></li>
                 <li><a href="#">Marca</a></li>
                 <li><a href="#">Contacto</a></li>
               </ul>
@@ -565,6 +561,7 @@
   <script src="js/productos.js"></script>
   <script src="js/controlador-category.js"></script>
   <script src="js/notify.js"></script>
+  <script src="js/controlador-index-sp.js"></script>
 </body>
 
 </html>
