feat: create dynamic cards templates for index

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <section class="section-margin calc-60px">
       <div class="container">
         <div class="section-intro pb-60px">
-          <p>Artículo popular en el mercado</p>
+          <p>Artículo de tendencia en el mercado</p>
           <h2>
             Productos <span class="section-intro__style">en Tendencia</span>
           </h2>
@@ -204,197 +204,6 @@
           <h2>Los más <span class="section-intro__style">Vendidos</span></h2>
         </div>
         <div class="owl-carousel owl-theme" id="bestSellerCarousel">
-          <div class="card text-center card-product">
-            <div class="card-product__img">
-              <img class="img-fluid" src="img/product/product1.jpg" alt="" />
-              <ul class="card-product__imgOverlay">
-                <li>
-                  <button><i class="ti-search"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-shopping-cart"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-heart"></i></button>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p>Accesorio Deporte</p>
-              <h4 class="card-product__title">
-                <a href="single-product.html">Smartwatch</a>
-              </h4>
-              <p class="card-product__price">16,99 €</p>
-            </div>
-          </div>
-
-          <div class="card text-center card-product">
-            <div class="card-product__img">
-              <img class="img-fluid" src="img/product/product2.jpg" alt="" />
-              <ul class="card-product__imgOverlay">
-                <li>
-                  <button><i class="ti-search"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-shopping-cart"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-heart"></i></button>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p>Belleza y Salud</p>
-              <h4 class="card-product__title">
-                <a href="single-product.html"> Colonia After Shave</a>
-              </h4>
-              <p class="card-product__price">4,15€</p>
-            </div>
-          </div>
-
-          <div class="card text-center card-product">
-            <div class="card-product__img">
-              <img class="img-fluid" src="img/product/product3.jpg" alt="" />
-              <ul class="card-product__imgOverlay">
-                <li>
-                  <button><i class="ti-search"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-shopping-cart"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-heart"></i></button>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p>Bricolage</p>
-              <h4 class="card-product__title">
-                <a href="single-product.html">Pegamento Extrafuerte</a>
-              </h4>
-              <p class="card-product__price">2,45€</p>
-            </div>
-          </div>
-
-          <div class="card text-center card-product">
-            <div class="card-product__img">
-              <img class="img-fluid" src="img/product/product4.jpg" alt="" />
-              <ul class="card-product__imgOverlay">
-                <li>
-                  <button><i class="ti-search"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-shopping-cart"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-heart"></i></button>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p>Alimentación</p>
-              <h4 class="card-product__title">
-                <a href="single-product.html">Galletas Nocilla</a>
-              </h4>
-              <p class="card-product__price">2,99€</p>
-            </div>
-          </div>
-
-          <div class="card text-center card-product">
-            <div class="card-product__img">
-              <img class="img-fluid" src="img/product/product1.jpg" alt="" />
-              <ul class="card-product__imgOverlay">
-                <li>
-                  <button><i class="ti-search"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-shopping-cart"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-heart"></i></button>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p>Accesorio Deporte</p>
-              <h4 class="card-product__title">
-                <a href="single-product.html">Smartwatch</a>
-              </h4>
-              <p class="card-product__price">16,99€</p>
-            </div>
-          </div>
-
-          <div class="card text-center card-product">
-            <div class="card-product__img">
-              <img class="img-fluid" src="img/product/product2.jpg" alt="" />
-              <ul class="card-product__imgOverlay">
-                <li>
-                  <button><i class="ti-search"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-shopping-cart"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-heart"></i></button>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p>Belleza y Salud</p>
-              <h4 class="card-product__title">
-                <a href="single-product.html">Colonia After Shave</a>
-              </h4>
-              <p class="card-product__price">4,15€</p>
-            </div>
-          </div>
-
-          <div class="card text-center card-product">
-            <div class="card-product__img">
-              <img class="img-fluid" src="img/product/product3.jpg" alt="" />
-              <ul class="card-product__imgOverlay">
-                <li>
-                  <button><i class="ti-search"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-shopping-cart"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-heart"></i></button>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p>Bricolage</p>
-              <h4 class="card-product__title">
-                <a href="single-product.html">Pegamento Extrafuerte</a>
-              </h4>
-              <p class="card-product__price">2,45€</p>
-            </div>
-          </div>
-
-          <div class="card text-center card-product">
-            <div class="card-product__img">
-              <img class="img-fluid" src="img/product/product4.jpg" alt="" />
-              <ul class="card-product__imgOverlay">
-                <li>
-                  <button><i class="ti-search"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-shopping-cart"></i></button>
-                </li>
-                <li>
-                  <button><i class="ti-heart"></i></button>
-                </li>
-              </ul>
-            </div>
-            <div class="card-body">
-              <p>Alimentación</p>
-              <h4 class="card-product__title">
-                <a href="single-product.html">Galletas Nocilla</a>
-              </h4>
-              <p class="card-product__price">2,99€</p>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -646,6 +455,31 @@
       </div>
     </div>
   </template>
+  <template id="template-card-2">
+  <div class="card text-center card-product" >
+    <div class="card-product__img">
+      <img class="img-fluid" src="img/product/product1.jpg" alt="" />
+      <ul class="card-product__imgOverlay">
+        <li>
+          <button class='remove'><i class="ti-trash"></i></button>
+        </li>
+        <li>
+          <button class='add'><i class="ti-shopping-cart"></i></button>
+        </li>
+        <li>
+          <button class='like'><i class="ti-heart"></i></button>
+        </li>
+      </ul>
+    </div>
+    <div class="card-body">
+      <p>Accesorio Deporte</p>
+      <h4 class="card-product__title">
+        <a href="single-product.html">Smartwatch</a>
+      </h4>
+      <p class="card-product__price">16,99 €</p>
+    </div>
+  </div>
+</template>
 
   <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
   <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
