feat: Add fix single product click

--- a/single-product.html
+++ b/single-product.html
@@ -703,7 +703,7 @@
                 <a href="#"><span>Disponibilidad</span> : In Stock</a>
               </li>
             </ul>
-            <p>
+            <p class='descripcion'>
               1.69'' Pantalla Táctil Completa a Color TFT -Smartwatch
               Multifuncións: como pulsera de actividad (podómetro, calorías,
               distancia), oxígeno sanguíneo, entrenamiento respiratorio,
@@ -749,7 +749,6 @@
   <script src="js/main.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
-  <script src="js/controlador.js"></script>
   <script src="js/controlador-index-sp.js"></script>
   <script src="js/notify.js"></script>
 
