feat: Add fix to buy a product in trending

--- a/category.html
+++ b/category.html
@@ -561,7 +561,7 @@
   <script src="js/productos.js"></script>
   <script src="js/controlador-category.js"></script>
   <script src="js/notify.js"></script>
-  <script src="js/controlador-index-sp.js"></script>
+  <!-- <script src="js/controlador-index-sp.js"></script> -->
 </body>
 
 </html>
