add formula search

--- a/category.html
+++ b/category.html
@@ -90,9 +90,9 @@
             </ul>
 
             <ul class="nav-shop">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <button><i class="ti-search"></i></button>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <button>
                   <i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span>
@@ -262,9 +262,9 @@
             </div>
             <div>
               <div class="input-group filter-bar-search">
-                <input type="text" placeholder="Search" />
+                <input id="busca" type="text" placeholder="Search"/>
                 <div class="input-group-append">
-                  <button type="button"><i class="ti-search"></i></button>
+                  <button id="buscador" type="button"><i class="ti-search">WIP</i></button>
                 </div>
               </div>
             </div>
@@ -760,6 +760,10 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="/js/productos.js"></script>
+  <script src="/js/cercador.js"></script>
+  
+
 </body>
 
 </html>
