feat: fix the search

--- a/category.html
+++ b/category.html
@@ -261,9 +261,9 @@
             </div>
             <div>
               <div class="input-group filter-bar-search">
-                <input id="busca" type="text" placeholder="Search"/>
+                <input id="busca" type="text" placeholder="Search" />
                 <div class="input-group-append">
-                  <button id="buscador" type="button"><i class="ti-search">WIP</i></button>
+                  <button id="buscador" type="button"><i class="ti-search"></i></button>
                 </div>
               </div>
             </div>
