erase search button

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
             </ul>
 
             <ul class="nav-shop">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <i class="ti-search"></i>
                 <input id="search" type="text" class="input" placeholder="search">
               </li>
               <li class="results-container">
                 <i class="results-list" id="list"></i>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <button>
                   <i class="ti-shopping-cart"></i><span class="nav-shop__circle"></span>
@@ -120,13 +120,11 @@
           </div>
           <div class="col-sm-7 col-lg-6 offset-lg-1 pl-4 pl-md-5 pl-lg-0">
             <div class="hero-banner__content">
-              <h4>Comprar es divertido</h4>
-              <h1>Explore nuestro producto premium</h1>
+              <h4>Los mejores precios siempre</h4>
+              <h1>solo 48 horas</h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Suscipit iure voluptatum atque accusantium tempore doloribus
-                quae facere? Quos, fugiat in itaque, soluta neque labore qui
-                quidem quibusdam odit, illum atque?
+                Bienvenido a nuestra web, donde podrás encontrar los mejores productos, las mejores marcas y los mejores precios. Pero no te esperes demasiado, ya que nuestras ofertas son tan buenas que solo las podemos mantener 48 horas. 
+                No rush!  
               </p>
               <a class="button button-hero" href="#">Navega ahora</a>
             </div>
@@ -276,13 +274,11 @@
     <section class="subscribe-position">
       <div class="container">
         <div class="subscribe text-center">
-          <h3 class="subscribe__title">
-            Obtenga actualizaciones desde cualquier lugar
-          </h3>
+          <h4 class="subscribe__title">
+            No te pierdas ninguna oferta
+          </h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
-            deleniti. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Id, deleniti.
+            Inscribete a nuestro newsletter para que estes al tanto de las últimas ofertas!
           </p>
           <div id="mc_embed_signup">
             <form target="_blank"
