--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
             </ul>
 
             <ul class="nav-shop">
-              <li class="nav-item"><button><i class="ti-search"></i></button></li>
+              <!-- <li class="nav-item"><button><i class="ti-search"></i></button></li> -->
               <li class="nav-item"><button><i class="ti-shopping-cart"></i><span
                     class="nav-shop__circle">3</span></button> </li>
               <li class="nav-item"><a class="button button-header" href="#">Comprar</a></li>
