--- a/contact.html
+++ b/contact.html
@@ -86,9 +86,9 @@
             </ul>
 
             <ul class="nav-shop">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <button><i class="ti-search"></i></button>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <button>
                   <i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span>
